# calibration-multiple-testing

./: README.md  pyproject.toml
data/: smooth_ece_estimates.pkl
notebooks/: lindsey.ipynb  reliability-plots.ipynb  simulation-studies.ipynb
npeb/: pyproject.toml
slurm/: combine_calibration_sims.sh  deploy_calibration_sims.sh
src/: calibration_sims.py
src/calibration_helpers/: __init__.py  calibrators.py  metrics.py  misc.py  mixtures.py
